fix(toast): fixed toast message overflow
fixed toast message overflow

COMUI-1360

--- a/src/components/stable/gux-notification-toast/gux-notification-toast.less
+++ b/src/components/stable/gux-notification-toast/gux-notification-toast.less
@@ -1,6 +1,7 @@
 // Variables part
 @import (reference) '../../../style/color.less';
 @import (reference) '../../../style/shadows.less';
+@import (reference) '../../../style/typography.less';
 
 :host {
   position: relative;
@@ -59,28 +60,17 @@
   align-self: auto;
   justify-content: flex-start;
   order: 0;
+  margin: 0 12px 0 8px;
+  color: @gux-type;
 
-  .gux-title {
-    flex: 1 1 auto;
-    align-self: auto;
-    order: 0;
-    max-height: 48px;
-    margin: 0 12px 0 8px;
-    overflow: hidden;
-    font-size: 14px;
-    line-height: 20px;
-    color: @gux-type;
-    text-overflow: ellipsis;
-  }
-
+  .gux-title,
   .gux-message {
     flex: 1 1 auto;
     align-self: auto;
     order: 0;
-    max-height: 24px;
-    margin: 0 12px 0 8px;
-    overflow: hidden;
-    line-height: 24px;
-    text-overflow: ellipsis;
+  }
+
+  .gux-title {
+    .h4();
   }
 }
